<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/vote_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/suara_kita" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:fontFamily="@font/sf_bold"
        android:textColor="@color/black"
        android:layout_below="@id/vote_icon"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/welcome_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_desc"
        android:textSize="16sp"
        android:fontFamily="@font/sf_regular"
        android:textColor="@color/black"
        android:layout_below="@id/welcome_text"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:fontFamily="@font/sf_bold"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:fontFamily="@font/sf_bold"
        android:textSize="18sp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button"/>

</RelativeLayout>