<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.camera.CameraActivity">

    <ImageView
        android:id="@+id/suara_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/suara_kita"
        android:layout_margin="12dp"
        android:transitionName="icon"/>

    <TextView
        android:id="@+id/terms_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mohon_unggah_ktp"
        android:textSize="24sp"
        android:fontFamily="@font/sf_bold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="14dp"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textSize="16sp"
            android:fontFamily="@font/sf_bold"
            android:text="@string/take_photo" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:fontFamily="@font/sf_bold"
            android:text="@string/upload" />

    </LinearLayout>

</LinearLayout>