<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".ui.vote.VerifyIdActivity">

    <ImageView
        android:id="@+id/suara_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/suara_kita"
        android:layout_margin="12dp"
        android:transitionName="icon"/>

    <TextView
        android:id="@+id/guide_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifikasi_nik"
        android:textSize="18sp"
        android:fontFamily="@font/sf_bold"
        android:textColor="@color/black"
        android:layout_below="@id/suara_logo"
        android:layout_marginTop="12dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nik"
        android:layout_marginTop="8dp"
        app:startIconDrawable="@drawable/baseline_card"
        android:layout_below="@id/guide_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/next"
        android:fontFamily="@font/sf_bold"
        android:textSize="18sp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/softred" />
</RelativeLayout>