<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.vote.VerivoteActivity">

    <ImageView
        android:id="@+id/suara_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/suara_kita"
        android:layout_margin="12dp"
        android:transitionName="icon"/>

    <TextView
        android:id="@+id/terms_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mohon_verifikasi"
        android:layout_below="@id/suara_logo"
        android:layout_margin="18dp"
        android:textSize="20sp"
        android:fontFamily="@font/sf_bold"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/terms_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="18dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textSize="16sp"
            android:fontFamily="@font/sf_bold"
            android:text="@string/take_photo" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:fontFamily="@font/sf_bold"
            android:text="@string/upload" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/softred" />

</RelativeLayout>